# polytech-test-task

./: .gitignore  Cargo.toml  README.md  apikeys.example.conf
src/: commands.rs  config.rs  main.rs  model.rs  provider.rs  utils.rs
