[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
reqwest = "0.11.14"
dirs = "4.0.0"

[features]
default = ["unix"]
windows = []
unix = []