[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Oleksandr Mykhailenko <armyhaylenko@gmail.com>"]

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
dirs = "4.0.0"
serde_json = "1.0.91"